部署到线上仓库

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -127,8 +127,15 @@ body {
   color: #3c3c3c;
   -webkit-font-smoothing: antialiased;
   background-color: #f4f4f4;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
 }
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome Safari */
+}
+
 img {
   vertical-align: middle;
 }
